--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Project from '../components/Project.astro';
 import Contact from '../components/Contact.astro';
 import Explanation from '../components/Explanation.astro';
 import Credits from '../components/Credits.astro';
+import Unlcku from '../components/Unlck-u.astro';
 ---
 
 <Layout>
@@ -13,4 +14,5 @@ import Credits from '../components/Credits.astro';
 	<Contact />
 	<Explanation />
 	<Credits />
+	<Unlcku />
 </Layout>
