LOTS OF updates and Navigation :-)

--- a/src/components/Credits.astro
+++ b/src/components/Credits.astro
@@ -19,6 +19,9 @@
             <br />
             => Check out my GitHub repo:<br />
             <a href="https://github.com/TomySpagnoletti/brainroadlabs_website" target="_blank">https://github.com/TomySpagnoletti/brainroadlabs_website</a>
+            <br />
+            <br />
+            <a href="#" id="open-debug-graph">Open Debug Graph</a>
         </p>
     </div>
 </div>
