--- a/src/components/Unlck-u.astro
+++ b/src/components/Unlck-u.astro
@@ -3,18 +3,17 @@
         <div class="br_js_header-container flex flex-wrap items-center mb-2">
             <h1 class="br_js_title text-xl">UNLCK•U</h1>
             <div class="br_js_badge br_badge ml-auto">
-                <div class="br_badge_green"></div>
-                XXX
+                <div class="br_badge_blue"></div>
+                Coming soon
             </div>
         </div>
         <p>
-            XXX
+            Life & Career Coaching
+            <br /><br />
+            UNLCK•U is a soon-to-launch coaching practice designed to help individuals unlock their full potential — both personally and professionally.<br />
+            Currently under development, the studio will offer structured, strategic, and personalized coaching sessions (excluding sports) focused on clarity, progress, and real-life impact.
+            <br /><br />
+            Stay tuned — UNLCK•U will open soon.
         </p>
     </div>
 </div>
-
-<!--
-
-    TODO: Remplir
-
--->
