Modal and little fix

--- a/src/components/Credits.astro
+++ b/src/components/Credits.astro
@@ -30,7 +30,7 @@ import logo from '../assets/images/logo_tapered.svg';
             <a href="https://github.com/TomySpagnoletti/brainroadlabs_website" target="_blank">https://github.com/TomySpagnoletti/brainroadlabs_website</a>
             <br />
             <br />
-            <div class="flex justify-center mt-4"><Image src={logo} alt="Brainroad Labs Logo" style="width: 150px; height: 150px;" /></div>
+            <div class="flex justify-center mt-4"><Image class="zoomable-image" src={logo} alt="Brainroad Labs Logo" style="width: 150px; height: 150px;" /></div>
             <br />
             <br />
             <a href="#" id="open-debug-graph">Open Debug Graph</a>
