--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import '../styles/global.css';
 import { Icon } from 'astro-icon/components';
 import LottieSplash from '../components/LottieSplash.astro';
+import Modal from '../components/Modal.astro';
 ---
 
 <!doctype html>
@@ -81,5 +82,6 @@ import LottieSplash from '../components/LottieSplash.astro';
 		
 		<script src="../scripts/index.js"></script>
 
+		<Modal />
 	</body>
 </html>
